k8s/backend.yaml
# ------------------ Backend Deployment ------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-backend
  namespace: python-node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-backend
  template:
    metadata:
      labels:
        app: python-backend
    spec:
      containers:
        - name: python-backend
          image: docker.io/93750/mynodepython-backend-anju:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

---

# ------------------ Backend Service ------------------
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: python-node
spec:
  selector:
    app: python-backend
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30500  # Optional, only if you want external access
  type: NodePort
